--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,13 @@
+
+<ng-template appRef></ng-template>
+
 <nav class="navbar">
-  <h1>Angular Modules</h1>
-
-  <ul>
-    <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/">Home</a></li>
-    <li routerLinkActive="active"><a routerLink="/about">About</a></li>
-  </ul>
+  <h1>Angular Dynamic components</h1>
 </nav>
-
 <div class="container">
   <div class="card">
-
-    <router-outlet></router-outlet>
-
+    <h1>Some contetnt</h1>
+    <button class="btn" (click)= "showModal()"> Show modal</button>
+    <!-- <app-modal *ngIf = "modal" title = "modal window" (close)="modal= false"></app-modal> -->
   </div>
 </div>
-
-
-
